syntax = "proto3";

package payment.v1;

option go_package = "github.com/MuhibNayem/Travio/server/api/proto/payment/v1";

service PaymentService {
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
  rpc VerifyPayment(VerifyPaymentRequest) returns (PaymentStatusResponse);
  rpc CapturePayment(CapturePaymentRequest) returns (PaymentStatusResponse);
  rpc RefundPayment(RefundPaymentRequest) returns (RefundResponse);
  rpc HandleIPN(IPNRequest) returns (IPNResponse);
  
  // Admin/Config RPCs
  rpc UpdatePaymentConfig(UpdatePaymentConfigRequest) returns (UpdatePaymentConfigResponse);
  rpc GetPaymentConfig(GetPaymentConfigRequest) returns (GetPaymentConfigResponse);
}

message CreatePaymentRequest {
  string order_id = 1;
  int64 amount_paisa = 2;
  string currency = 3;
  string payment_method = 4;
  string customer_name = 5;
  string customer_email = 6;
  string customer_phone = 7;
  string description = 8;
  string return_url = 9;
  string cancel_url = 10;
  string ipn_url = 11;
  string organization_id = 12;
}

message CreatePaymentResponse {
  string payment_id = 1;
  string session_id = 2;
  string redirect_url = 3;
  string gateway = 4;
  string status = 5;
}

message VerifyPaymentRequest {
  string gateway = 1;
  string transaction_id = 2;
}

message CapturePaymentRequest {
  string gateway = 1;
  string transaction_id = 2;
}

message PaymentStatusResponse {
  string transaction_id = 1;
  string gateway_ref = 2;
  string status = 3;
  int64 amount_paisa = 4;
  string currency = 5;
  string card_brand = 6;
  string card_last4 = 7;
  string failure_reason = 8;
}

message RefundPaymentRequest {
  string gateway = 1;
  string transaction_id = 2;
  int64 amount_paisa = 3;
  string reason = 4;
}

message RefundResponse {
  string refund_id = 1;
  string transaction_id = 2;
  int64 amount_paisa = 3;
  string status = 4;
}

message IPNRequest {
  string gateway = 1;
  bytes payload = 2;
}

message IPNResponse {
  bool valid = 1;
  string transaction_id = 2;
  string order_id = 3;
  string status = 4;
}

message UpdatePaymentConfigRequest {
  string organization_id = 1;
  string gateway = 2; // 'sslcommerz', 'bkash', 'nagad'
  map<string, string> credentials = 3;
  bool is_active = 4;
}

message UpdatePaymentConfigResponse {
  bool success = 1;
  string message = 2;
}

message GetPaymentConfigRequest {
  string organization_id = 1;
}

message GetPaymentConfigResponse {
  string organization_id = 1;
  string gateway = 2;
  bool is_active = 3;
}
